--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,29 @@
 
-# Created by https://www.gitignore.io/api/Intellij,PyCharm,macos
+# Created by https://www.gitignore.io/api/virtualenv
 
-### Intellij ###
+### VirtualEnv ###
+# Virtualenv
+# http://iamzed.com/2009/05/07/a-primer-on-virtualenv/
+.Python
+[Bb]in
+[Ii]nclude
+[Ll]ib
+[Ll]ib64
+[Ll]ocal
+[Mm]an
+[Ss]cripts
+[Tt]cl
+pyvenv.cfg
+.venv
+pip-selfcheck.json
+
+
+# End of https://www.gitignore.io/api/virtualenv
+
+
+# Created by https://www.gitignore.io/api/JetBrains+all,macos,PyCharm
+
+### JetBrains+all ###
 # Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio and Webstorm
 # Reference: https://intellij-support.jetbrains.com/hc/en-us/articles/206544839
 
@@ -55,16 +77,18 @@ crashlytics.properties
 crashlytics-build.properties
 fabric.properties
 
-### Intellij Patch ###
-# Comment Reason: https://github.com/joeblau/gitignore.io/issues/186#issuecomment-215987721
+### JetBrains+all Patch ###
+# Ignores the whole .idea folder and all .iml files
+# See https://github.com/joeblau/gitignore.io/issues/186 and https://github.com/joeblau/gitignore.io/issues/360
 
-# *.iml
-# modules.xml
-# .idea/misc.xml
-# *.ipr
+.idea/
 
-# Sonarlint plugin
-.idea/sonarlint
+# Reason: https://github.com/joeblau/gitignore.io/issues/186#issuecomment-249601023
+
+*.iml
+modules.xml
+.idea/misc.xml
+*.ipr
 
 ### macOS ###
 *.DS_Store
@@ -132,6 +156,11 @@ Temporary Items
 # *.ipr
 
 # Sonarlint plugin
+.idea/sonarlint
 
 
-# End of https://www.gitignore.io/api/Intellij,PyCharm,macos
+# End of https://www.gitignore.io/api/JetBrains+all,macos,PyCharm
+
+inv_index/*.txt
+inv_index/*.zip
+inv_index/data/
